--- a/Meraki/logstash pipelines/API_Pollers/p-merakiApi-orgs.conf
+++ b/Meraki/logstash pipelines/API_Pollers/p-merakiApi-orgs.conf
@@ -2,7 +2,7 @@
 #                                                                                  
 #  Meraki API Device Poller                                                  
 #                                                                                  
-#  Last Revised:    04/20/2020
+#  Last Revised:    04/21/2020
 #  Transport:       HTTP Poller                                   
 #  Compatibility:   ecs 1.5.0                                    
 #  Notes:           Logstash pipeline to pull device information from Meraki API for 
@@ -12,7 +12,8 @@
 #                   GeoParsing is manual, based on address field in Meraki device:
 #                     name;city_name;region_name;country_iso_code;region_iso_code;continent_name
 #                     I'd recommend using internal "site codes" for names
-#  To Do:           good schedule- run on new device? (webhook from Meraki)
+#  To Do:           split out MR/ MX SSID retrieval 
+#                    good schedule- run on new device? (webhook from Meraki)
 #                   automate enrichment index build
 #
 #    !! WARNING !!   !! WARNING !!   !! WARNING !!   !! WARNING !!   !! WARNING !!  
@@ -84,10 +85,10 @@ filter {
     split { field => "device" }
 
     ##################################################################################
-    ### Get Meraki MX VLANs
+    ### Get Meraki MX & L3 MS Switch VLANS
     ##################################################################################
 
-    if "MX" in [device][model] {
+    if "MX" in [device][model] or "MS3" in [device][model] {
         http {
             url => "https://api.meraki.com/api/v0/networks/%{[network][id]}/vlans"
             verb => "GET"
@@ -99,28 +100,61 @@ filter {
         }
         split { field => "vlan" }
         
-        ## Fix LanIp for MX Series
+        ## Fix LanIp for MX Series & rename vlan fields
         mutate {
             update => { "[device][lanIp]" => "%{[vlan][applianceIp]}" }
+            add_field => { 
+                "[meraki][vlan][id]" => "%{[vlan][id]}"
+                "[meraki][vlan][name]" => "%{[vlan][name]}" 
+                "[meraki][vlan][network_id]" => "%{[vlan][networkId]}" 
+                "[meraki][vlan][subnet]" => "%{[vlan][subnet]}" 
+            }
+            remove_field => [ "[vlan]", "temp_vlan" ]
         }
     }
+
+    ##################################################################################
+    ### Get Meraki MR SSIDS
+    ##################################################################################
+    if "MR" in [device][model] {
+        http {
+            url => "https://api.meraki.com/api/v0/networks/%{[network][id]}/devices/%{[device][serial]}/wireless/status"
+            verb => "GET"
+            headers => {
+                "X-Cisco-Meraki-API-Key" => "${meraki_api}"
+                Accept => "application/json" }
+            target_body =>  "ssid" 
+            target_headers => "temp_ssid"
+        }
+        split { field => "[ssid][basicServiceSets]" }
+
+        if "Unconfigured" in [ssid][basicServiceSets][ssidName] {
+            drop {}
+        }
+
+    }
+
+
+
+
+
     
 
     ## Split up Firmware Information, skip offline devices
 
-    if "Not" in [device][firmware] {
-        mutate { remove_field => [ "[device][firmware]" ] }
+    if  [device][firmware] != "Not running configured version" {
+        mutate { add_field => { "firmware" => "%{[device][firmware]}" } }
+        mutate { split => { "firmware" => "-" } }
+        mutate {
+            add_field => { 
+                "[os][family]" => "%{[firmware][0]}" 
+                "[os][version]" =>  "%{[firmware][1]}.%{[firmware][2]}" 
+                "[os][full]" => "%{[firmware][0]} %{[firmware][1]}.%{[firmware][2]}" 
+            }
+        }
     }
     else {
-        mutate {
-            add_field => { "firmware" => "%{[device][firmware]}" }
-    
-            split => { "firmware" => "-" }
-            add_field => { "[os][family]" => "%{[firmware][0]}" }
-            add_field => { "[os][version]" =>  "%{[firmware][1]}.%{[firmware][2]}" }    
-            add_field => { "[os][full]" => "%{[firmware][0]} %{[firmware][1]}.%{[firmware][2]}" }
-            rename => [ "[device][firmware]", "[meraki][device][firmware]" ]
-        }
+        mutate {  update => { "[device][firmware]" => "unknown" } }
     }
 
 
@@ -132,31 +166,30 @@ filter {
         match => { "[device][address]" => "%{DATA:[geo][name]};%{DATA:[geo][city_name]};%{DATA:[geo][region_name]};%{WORD:[geo][country_iso_code]}-%{WORD:[geo][region_iso_code]};%{GREEDYDATA:[geo][continent_name]}" }
     }
 
+    ## General Cleanup, fidl renaming, etc.
     mutate {
 
         ## update region ISO code
         update => { "[geo][region_iso_code]" => "%{[geo][country_iso_code]}-%{[geo][region_iso_code]}" }
 
-        remove_field => [ "[temp_org]", "[temp_network]", "[temp_device]", "[temp_vlan]" ]
-
         rename => [ "[organization]", "[meraki][organization]" ]
         rename => [ "[network]", "[meraki][network]" ]
         rename => [ "[device]", "[meraki][device]" ]
+        rename => [ "[device][firmware]", "[meraki][device][firmware]" ]
 
-        add_field => { "[meraki][vlan][id]" => "%{[vlan][id]}" }
-        add_field => { "[meraki][vlan][name]" => "%{[vlan][name]}" }
-        add_field => { "[meraki][vlan][network_id]" => "%{[vlan][networkId]}" }
-        add_field => { "[meraki][vlan][subnet]" => "%{[vlan][subnet]}" }
 
         remove_field => [ "[meraki][organization][@version]", "[meraki][organization][@timestamp]", "[meraki][organization][samlConsumerUrl]", "[meraki][organization][samlConsumerUrls]" ]
         remove_field => [ "[meraki][network][disableMyMerakiCom]", "[meraki][network][disableRemoteStatusPage]" ]
-        remove_field => [ "[vlan]", "[meraki][device][networkId]", "[meraki][network][organizationId]" ]
+        remove_field => [ "[meraki][device][networkId]", "[meraki][network][organizationId]" ]
+        remove_field => [ "[temp_org]", "[temp_network]", "[temp_device]", "[temp_ssid]", "[firmware]" ]
 
         ## Add root level enrichment Fields for direct insertion
-        add_field => { "name" => "%{[meraki][device][name]}" }
-        add_field => { "mac" => "%{[meraki][device][mac]}" }
-        add_field => { "product" => "%{[meraki][device][model]}" }
-        add_field => { "serial_number" => "%{[meraki][device][serial]}" }
+        add_field => { 
+            "mac" => "%{[meraki][device][mac]}" 
+            "name" => "%{[meraki][device][name]}" 
+            "product" => "%{[meraki][device][model]}" 
+            "serial_number" => "%{[meraki][device][serial]}" 
+        }
 
     }
 }
@@ -166,6 +199,13 @@ output {
         hosts => "${ES_HOST}"
         user => "${ES_INGEST}"
         password => "${ES_INGEST_PW}"
-        index => "ecs-asset-meraki""
+        index => "ecs-meraki-inventory-test"
     }
+
+##    file {
+##        path => "/tmp/debug_meraki_api_poller.log"
+##        codec => "rubydebug"
+##    }
+
+
 }
