--- a/Meraki/logstash pipelines/Syslog/i-meraki-syslog.conf
+++ b/Meraki/logstash pipelines/Syslog/i-meraki-syslog.conf
@@ -2,15 +2,12 @@
 #                                                                                  
 #  Meraki Pipeline Input                                                  
 #                                                                                  
-#  Last Revised:    03/30/2019 
+#  Last Revised:    04/29/2019 
 #  Transport:       syslog 5000                                  
 #  Compatibility:   ecs 1.5.0 dev                                    
 #  Notes:           pipeline input for full meraki syslogs      
-#                    - can't remember why I went with udp over syslog
-#  Todos:           1) fix nano event timestamps and replace @timestamp
-#                   2) verify flow id - ip_flow is good for mx, pattern for AP?
-#                   3) enrichment for API poller?
-#                   4) verify meraki pipeline covers all requirements
+#                   can't remember why I went with udp over syslog
+#  Todos:          
 ######################################################################################
 
 input {
@@ -20,8 +17,8 @@ input {
         ## IPv4 port w/o hard coding, have yet to figure out why, so often hard 
         ## code IP the pipeline should listen on
         
-        host => "${LS_IP}"
-        port => ${LS_MERAKI_PORT}
+        host => "${LOGSTASH_IP}"
+        port => ${LOGSTASH_PORT}
         type => "meraki"
     }
 }
@@ -41,18 +38,25 @@ filter {
     ## Make any global Meraki mutations
     ######################################################
     mutate {
-      add_field => { "[event][created]" => "%{@timestamp}" }
-      add_field => { "[event][original]" => "%{message}" }
-      add_field => { "[ecs][version]" => "1.5.0" }
+        add_field => { "[event][created]" => "%{@timestamp}" }
+        add_field => { "[event][original]" => "%{message}" }
+        add_field => { "[ecs][version]" => "1.5.0" }
+        add_field => { "[event][module]" => "meraki" }
     }
 
     ######################################################
     ###           Identifty Meraki Log Types           ###
     ######################################################
 
+    ## VPN Registry
+    ######################################################
+    if "vpn_registry_change" in [message] {
+        drop{}
+    }
+
     ## URLS
     ######################################################
-    if "urls" in [message] {
+    else if "urls" in [message] {
         mutate { update => { "type" => "meraki.url" } }
     }
 
@@ -64,9 +68,23 @@ filter {
 
     ## Flow Logs (basically FW accept/deny)
     ######################################################
-    else if "ip_flow" in [message] or "pattern:" in [message] {
+    else if "ip_flow" in [message] or "pattern:" in [message] or "flows" in [message] {
         mutate { update => { "type" => "meraki.flow" } }               
     }
+
+    ## Contecnt Blocking
+    ######################################################
+    else if "content_filtering_block" in [message] {
+        mutate { update => { "type" => "meraki.content" } }               
+    }
+
+    ## IDS Alerts
+    ######################################################
+    else if "security_event" in [message] {
+        mutate { update => { "type" => "meraki.ids" } }               
+    }
+
+
     
     ## TO DO:
     ##
@@ -97,12 +115,20 @@ output {
         pipeline { send_to => "meraki-flow" }
     } 
 
-    else if [type] == "meraki" {
-        pipeline { send_to => "meraki" }
-    }
-    
-    else if [type] == "meraki.content" {
+    else if [type] == "meraki.content"  {
         pipeline { send_to => "meraki-content" }
     } 
 
+    else if [type] == "meraki.ids" {
+        pipeline { send_to => "meraki-ids" }
+    }
+
+    else {
+        pipeline { send_to => "meraki-raw" }
+    }
+
+#    file {
+#        path => "/var/log/logstash/syslog/meraki-input.log"
+#        codec => "rubydebug"
+#    }
 }
