--- a/Meraki/logstash pipelines/Syslog/p-meraki-auth.conf
+++ b/Meraki/logstash pipelines/Syslog/p-meraki-auth.conf
@@ -1,8 +1,8 @@
 ######################################################################################
 #                                                                                  
-#  Meraki Authentication Logstash Pipeline                                                  
+#  Meraki EAP Authentication Logstash Pipeline                                                  
 #                                                                                  
-#  Last Revised:    03/30/2019 
+#  Last Revised:    04/29/2019 
 #  Transport:       logstash pipeline                                   
 #  Compatibility:   ecs 1.5.0 dev                                    
 #  Notes:           
@@ -24,7 +24,7 @@ filter {
     ######################################################
 
     grok {    
-        match => { "message" => "%{INT:millis}.%{INT:nanos} %{WORD:[host][name]} events type=%{NOTSPACE:eap_outcome} radio='%{NUMBER:[wireless][radio][id]}' vap='%{NUMBER:[wireless][ssid][id]}' client_mac='%{MAC:[source][mac]}' client_ip='%{IP:[source][ip]}' identity='%{EMAILADDRESS:[user][name]}' aid='%{NUMBER:[wireless][association][id]}'" }
+        match => { "message" => "%{INT:millis}.%{INT:nanos} %{WORD:[host][name]} events type=%{NOTSPACE:eap_outcome} radio='%{NUMBER:[wireless][radio][id]}' vap='%{NUMBER:[wireless][ssid][id]}' client_mac='%{MAC:[source][mac]}' client_ip='%{IP:[source][ip]}' identity='%{USERNAME:[user][name]}?(?:@%{USERNAME:[user][domain]})' aid='%{NUMBER:[wireless][association][id]}'" }
     }
         
     ######################################################
@@ -32,14 +32,16 @@ filter {
     ######################################################
     if [eap_outcome] == "8021x_eap_success" {
         mutate {
-            add_field => { "[event][type]" => "authentication_success" }
+            add_field => { "[event][type]" => [ "authentication", "authentication_success" ] }
             add_field => { "[event][outcome]" => "success" }
+            add_field => { "[event][action]" => "eap_auth_success" }
         }
     }
     if [eap_outcome] == "8021x_eap_failure" {
         mutate {
-            add_field => { "[event][type]" => "authentication_failure" }
+            add_field => { "[event][type]" => [ "authentication", "authentication_failure" ] }
             add_field => { "[event][outcome]" => "failure" }
+            add_field => { "[event][action]" => "eap_auth_failure" }
         }
     }
 
@@ -54,6 +56,10 @@ filter {
         match => [ "%{millis}%{nanos}", "UNIX_MS"]
         target => "@timestamp"
     }
+    mutate {
+        remove_field => [ "millis", "nanos" ]
+    }
+
 
     mutate {
 
@@ -62,38 +68,31 @@ filter {
         ######################################################
         add_field => { "[event][kind]" => "event" }
         add_field => { "[event][category]" => "authentication"}
+        add_field => { "[related][user]" => "%{[user][name]}" }
+        #add_field => { "[related][user][domain]" => "%{[user][domain]}" }
 
-        ##add_field => { "[event][type]" => ""}
-        ##add_field => { "[event][action]" => "user_authentication"}
-        ##add_field => { "[event][outcome]" => ""}
-
-
-        ######################################################
-        ###             Populate host fields           ###
-        ######################################################
-        add_field => { "[host][type]" => "AP" }
-        add_field => { "[host][os][name]" => "Meraki" }
-        add_field => { "[host][os][platform]" => "Wireless" }
-        add_field => { "[host][os][version]" => "25.13" }
-        
         ## Fix Meraki _ reporting
         gsub => [ "[host][name]", "\_", "." ]
-
+    }
     
-        ##Clean Up
-        remove_field => [ "millis", "nanos", "type" ]
-
-
+    mutate {
+        remove_field => [ "type", "eap_outcome" ]
     }
 }
 
 
 output {
+
     elasticsearch {
-        hosts => "${ES_HOST}"
-        user => "${ES_INGEST}"
-        password => "${ES_INGEST_PW}"
-        index => "ecs-meraki-eap"
+        hosts => "${ES77_HOST}"
+        user => "${ES77_INGEST}"
+        password => "${ES77_INGEST_PW}"
+        index => "ecs-meraki-auth"
         pipeline => "meraki"
     }
+
+    #file {
+    #    path => "/var/log/logstash/syslog/meraki-auth.log"
+    #    codec => "rubydebug"
+    #}
 }
