--- a/Meraki/logstash pipelines/Syslog/p-meraki-content.conf
+++ b/Meraki/logstash pipelines/Syslog/p-meraki-content.conf
@@ -1,8 +1,8 @@
 ######################################################################################
 #                                                                                  
-#  Meraki Content Block Logstash Pipeline                                                  
+#  Meraki Content Blocked Logstash Pipeline                                                  
 #                                                                                  
-#  Last Revised:    03/30/2019 
+#  Last Revised:    04/29/2019 
 #  Transport:       logstash pipeline                                   
 #  Compatibility:   ecs 1.5.0 dev                                    
 #  Notes:           
@@ -20,7 +20,7 @@ filter {
     ###                Grok Meraki URLs                ###
     ######################################################
     grok {    
-        match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} %{WORD:[observer][name]} %{WORD:[event][module]} content_filtering_block url='%{URI:[url][original]}' category0='%{GREEDYDATA:[rule][name]}' server='%{IP:[destination][ip]}:%{NUMBER:[destination][port]}' ?(?:client_mac='%{MAC:[source][mac]}')?"}
+        match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} %{WORD:[observer][name]} %{WORD:[temp][module]} content_filtering_block url='%{URI:[url][original]}' category0='%{GREEDYDATA:[rule][name]}' server='%{IP:[destination][ip]}:%{NUMBER:[destination][port]}' ?(?:client_mac='%{MAC:[source][mac]}')?"}
     }
 
     ######################################################
@@ -64,18 +64,20 @@ filter {
         ######################################################
         ###                Add core ECS fields             ###
         ######################################################
-        add_field => { "[event][kind]" => "event" }
-        add_field => { "[event][category]" => "web"}
-        add_field => { "[event][type]" => "connection"}
-        add_field => { "[event][action]" => "web_connection_blocked"}
-        add_field => { "[event][outcome]" => "success"}
-        add_field => { "[event][dataset]" => "meraki.urls" }
+        add_field => { 
+            "[event][kind]" => "alert" 
+            "[event][category]" => "web"
+            "[event][type]" =>  "connection" 
+            "[event][action]" => "web_connection_blocked"
+            "[event][outcome]" => "success"
+            "[event][dataset]" => "meraki.content_filter" 
+            "[event][severity]" => "5"
+            "[observer][vendor]" => "meraki" 
+            "[network][type]" => "ipv4" 
+            "[network][transport]" => "tcp" 
+            "[network][protocol]" => "%{[url][scheme]}"
+        }
 
-
-        ######################################################
-        ###             Populate Observer fields           ###
-        ######################################################
-        add_field => { "[observer][vendor]" => "meraki" }
         rename =>    { "[host]" => "[observer][ip]"  }
         gsub => [ "[observer][name]", "\_", "." ]
 
@@ -89,20 +91,25 @@ filter {
         lowercase => [ "[http][request][method]" ]
 
         #remove temp fields, etc.
-        remove_field => [ "millis", "nanos", "ip" , "port", "@version", "type", "[urls][sld]", "[urls][subdomain]", "[urls]" ]
+        remove_field => [ "[temp]", "millis", "nanos", "ip" , "port", "@version", "type", "[urls][sld]", "[urls][subdomain]", "[urls]", "message" ]
     }
 
 }
 
 output {
-    
+
     ## Meraki URL Logging
     elasticsearch {
-        hosts => "${ES_HOST}"
-        user => "${ES_INGEST}"
-        password => "${ES_INGEST_PW}"
-        index => "ecs-meraki-content"
+        hosts => "${ES77_HOST}"
+        user => "${ES77_INGEST}"
+        password => "${ES77_INGEST_PW}"
+        index => "ecs-meraki-filter"
         pipeline => "meraki"
     }
+
+  #  file {
+  #      path => "/var/log/logstash/syslog/meraki-content.log"
+  #      codec => "rubydebug"
+  #  }
 }
 
