--- a/Meraki/logstash pipelines/Syslog/p-meraki-flow.conf
+++ b/Meraki/logstash pipelines/Syslog/p-meraki-flow.conf
@@ -1,13 +1,12 @@
 ######################################################################################
 #                                                                                  
-#  Meraki URL Flow Log Pipeline                                        
+#  Meraki Flow Log Pipeline (flow events from syslog)                                                 
 #                                                                                  
-#  Last Revised:    04/13/2019 
-#  Transport:       Pipeline form p-meraki-input                                   
-#  Compatibility:   ecs 1.5.0 dev                                    
-#  Notes:                    
-#  To Do:           Logic for network protocol
-#                   Implement Community ID filter                                                                            
+#  Last Revised:   04/13/2019 
+#  Transport:      udp 9514                                   
+#  Compatibility:  ecs 1.5.0 dev                                    
+#  Notes:   gsub fix for meraki .s in names
+#           updated to arrays for nested fields                                                                            
 ######################################################################################
 
 input { 
@@ -22,9 +21,9 @@ filter {
         match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} ip_flow_%{NOTSPACE:flow_state} src=%{IP:[source][ip]} dst=%{IP:[destination][ip]} protocol=%{WORD:[network][transport]} sport=%{NUMBER:[source][port]} dport=%{NUMBER:[destination][port]} translated_src_ip=%{IP:[source][nat][ip]} translated_port=%{NUMBER:[source][nat][port]}" }
         match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} ip_flow_%{NOTSPACE:flow_state} src=%{IP:[source][ip]} dst=%{IP:[destination][ip]} protocol=%{WORD:[network][transport]} sport=%{NUMBER:[source][port]} dport=%{NUMBER:[destination][port]} translated_dst_ip=%{IP:[destination][nat][ip]} translated_port=%{NUMBER:[destination][nat][port]}" }
         match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} ip_flow_%{NOTSPACE:flow_state} src=%{IP:[source][ip]} dst=%{IP:[destination][ip]} protocol=%{WORD:[network][transport]} ?(?:translated_dst_ip=%{IP:[destination][nat][ip]})? ?(?:translated_src_ip=%{IP:[source][nat][ip]})?" }   
-        match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} %{WORD:[observer][name]} %{WORD:[event][module]} ?(?:%{WORD:[event][action]})? src=%{IP:[source][ip]} dst=%{IP:[destination][ip]} ?(?:mac=%{MAC:[source][mac]})? protocol=%{WORD:[network][protocol]} sport=%{NUMBER:[source][port]} dport=%{NUMBER:[destination][port]} ?(?:pattern: %{GREEDYDATA:[rule][name]})?" }
-        match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} %{WORD:[observer][name]} %{WORD:[event][module]} ?(?:%{WORD:[event][action]})? src=%{IP:[source][ip]} dst=%{IP:[destination][ip]} ?(?:mac=%{MAC:[source][mac]})? protocol=%{WORD:[network][protocol]} type=%{INT:[icmp][type]} pattern: %{INT:[rule][number]} %{GREEDYDATA:[rule][name]}" }
-}   
+        match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} %{WORD:[observer][name]} %{WORD:[temp][module]} ?(?:%{WORD:[event][action]})? src=%{IP:[source][ip]} dst=%{IP:[destination][ip]} ?(?:mac=%{MAC:[source][mac]})? protocol=%{WORD:[network][protocol]} sport=%{NUMBER:[source][port]} dport=%{NUMBER:[destination][port]} ?(?:pattern: %{GREEDYDATA:[rule][name]})?" }
+        match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} %{WORD:[observer][name]} %{WORD:[temp][module]} ?(?:%{WORD:[event][action]})? src=%{IP:[source][ip]} dst=%{IP:[destination][ip]} ?(?:mac=%{MAC:[source][mac]})? protocol=%{WORD:[network][protocol]} type=%{INT:[icmp][type]} pattern: %{INT:[rule][number]} %{GREEDYDATA:[rule][name]}" }
+    }   
     
      mutate {
 
@@ -36,9 +35,9 @@ filter {
         add_field => { "[event][dataset]" => "meraki.flows" }
         add_field => { "[event][category]" => "network" }
         add_field => { "[event][outcome]" => "success" }
-        add_field => { "[event][type]" => "connection" }    
-
-
+        add_field => { "[event][type]" => "connection" }   
+        add_field => { "[related][ip]" => [ "%{[source][ip]}", "%{[destination][ip]}" ] }
+ 
         ######################################################
         ###             Populate Observer fields           ###
         ######################################################
@@ -47,8 +46,12 @@ filter {
 
     }
 
-    if ![event][module] {
-        mutate { add_field => { "[event][module]" => "flows" } }
+    if [source][nat][ip] {
+         mutate { add_field => { "[related][ip]" => [  "%{[source][nat][ip]}" ] } }
+    }
+
+    if [destination][nat][ip] {
+         mutate { add_field => { "[related][ip]" => [  "%{[destination][nat][ip]}" ] } }
     }
 
 
@@ -74,11 +77,27 @@ filter {
     }
 
     ######################################################
-    ###        Final fixes and cleanup          ###
+    ###             Final fixes and cleanup            ###
     ######################################################
     mutate {
         gsub => [ "[observer][name]", "_", "." ]
-        remove_field => [ "millis", "nanos", "flow_state", "type", "@version"]
+        remove_field => [ "millis", "nanos", "flow_state", "type", "@version", "message", "[temp]"]
+    }
+
+    ######################################################
+    ###                   Community ID                 ###
+    ######################################################
+    ruby {
+        path => "/etc/logstash/conf.d/ruby/logstash-ruby-filter-community-id.rb"
+        script_params => {
+            "source_ip_field" => "[source][ip]"
+            "dest_ip_field" => "[destination][ip]"
+            "source_port_field" => "[source][port]"
+            "dest_port_field" => "[destination][port]"
+            "protocol_field" => "[network][transport]"
+            "target_field" => "[network][community_id]"
+        }
+        tag_on_exception =>  "_rubyexception-all-community_id_bidirectional"
     }
 }
 
@@ -87,10 +106,15 @@ output {
 
     ## Meraki Flow Logging
     elasticsearch {
-        hosts => "${ES_HOST}"
-        user => "${ES_INGEST}"
-        password => "${ES_INGEST_PW}"
-        index => "ecs-meraki-flows"
+        hosts => "${ES77_HOST}"
+        user => "${ES77_INGEST}"
+        password => "${ES77_INGEST_PW}"
+        index => "ecs-meraki-flow"
         pipeline => "meraki"
     }
+
+    # file {
+    #    path => "/var/log/logstash/syslog/meraki-flow.log"
+    #    codec => "rubydebug"
+    #}
 }
