--- a/Meraki/logstash pipelines/Syslog/p-meraki-url.conf
+++ b/Meraki/logstash pipelines/Syslog/p-meraki-url.conf
@@ -2,7 +2,7 @@
 #                                                                                  
 #  Meraki URL Logstash Pipeline                                                  
 #                                                                                  
-#  Last Revised:    03/30/2019 
+#  Last Revised:    04/29/2019 
 #  Transport:       logstash pipeline                                   
 #  Compatibility:   ecs 1.5.0 dev                                    
 #  Notes:           
@@ -20,7 +20,7 @@ filter {
     ###                Grok Meraki URLs                ###
     ######################################################
     grok {    
-        match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} %{WORD:[observer][name]} %{WORD:[event][module]} src=%{IP:[source][ip]}:%{NUMBER:[source][port]} dst=%{IP:[destination][ip]}:%{NUMBER:[destination][port]} mac=%{MAC:[source][mac]} ?(?:agent=%{QS:[useragent]})? request: %{WORD:[http][request][method]} %{URI:[url][original]}"}
+        match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} %{WORD:[observer][name]} %{WORD:[temp][module]} src=%{IP:[source][ip]}:%{NUMBER:[source][port]} dst=%{IP:[destination][ip]}:%{NUMBER:[destination][port]} mac=%{MAC:[source][mac]} ?(?:agent=%{QS:[useragent]})? request: %{WORD:[http][request][method]} %{URI:[url][original]}"}
     }
 
     ######################################################
@@ -58,15 +58,6 @@ filter {
     }
 
     ######################################################
-    ###                   To Do Later?                 ###
-    ######################################################
-    # Add phishScore?
-    # Add Alexa?
-    # Add TI?
-    # Add Relative Risk Score?
-    # Ping Meraki API?
-
-    ######################################################
     ###         Fix for Nanosecond timestamps          ###
     ######################################################
     truncate {
@@ -78,55 +69,80 @@ filter {
         target => "@timestamp"
     }
 
-
     mutate {
-        ######################################################
-        ###                Add core ECS fields             ###
-        ######################################################
-        add_field => { "[event][kind]" => "event" }
-        add_field => { "[event][category]" => "web"}
-        add_field => { "[event][type]" => "connection"}
-        add_field => { "[event][action]" => "web_connection"}
-        add_field => { "[event][outcome]" => "success"}
-        add_field => { "[event][dataset]" => "meraki.urls" }
+    ######################################################
+    ###                Add core ECS fields             ###
+    ######################################################
+        add_field => { 
+            "[event][kind]" => "event" 
+            "[event][category]" => "web"
+            "[event][type]" => "connection"
+            "[event][action]" => "web_connection"
+            "[event][outcome]" => "success"
+            "[event][dataset]" => "meraki.urls" 
+            "[observer][vendor]" => "meraki" 
+            "[network][protocol]" => "%{[url][scheme]}"
+            "[network][iana_number]" => "6"
+            "[network][transport]" => "tcp"
+            "[related][ip]" => [ "%{[source][ip]}", "%{[destination][ip]}" ]
+        }
 
+    rename =>    { "[host]" => "[observer][ip]"  }
+    gsub => [ "[observer][name]", "\_", "." ]
 
-        ######################################################
-        ###             Populate Observer fields           ###
-        ######################################################
-        add_field => { "[observer][vendor]" => "meraki" }
-        rename =>    { "[host]" => "[observer][ip]"  }
-        gsub => [ "[observer][name]", "\_", "." ]
+    ## URL Domain Corrections
+    rename =>    { "[urls][domain]" => "[url][registered_domain]"  }
+    rename =>    { "[urls][trd]" => "[url][subdomain]"  }
+    rename =>    { "[urls][tld]" => "[url][top_level_domain]" } 
+    rename =>    { "[url-domain]" => "[url][domain]" } 
 
-        ## URL Domain Corrections
-        rename =>    { "[urls][domain]" => "[url][registered_domain]"  }
-        rename =>    { "[urls][trd]" => "[url][subdomain]"  }
-        rename =>    { "[urls][tld]" => "[url][top_level_domain]" } 
-        rename =>    { "[url-domain]" => "[url][domain]" } 
+    ## standardise http Request Method
+    lowercase => [ "[http][request][method]" ]
 
-        ## standardise http Request Method
-        lowercase => [ "[http][request][method]" ]
-
-        #remove temp fields, etc.
-        remove_field => [ "millis", "nanos", "ip" , "port", "@version", "type", "[urls][sld]", "[urls][subdomain]", "[urls]" ]
+    #remove temp fields, etc.
     }
 
+    date {
+        match => [ "%{millis}%{nanos}", "UNIX_MS"]
+        target => "@timestamp"
+    }
 
-        date {
-            match => [ "%{millis}%{nanos}", "UNIX_MS"]
-            target => "@timestamp"
+    ######################################################
+    ###                   Community ID                 ###
+    ######################################################
+    if [source][ip] and [destination][ip] and [network][transport]  {
+        ruby {
+            path => "/etc/logstash/conf.d/ruby/logstash-ruby-filter-community-id.rb"
+            script_params => {
+                "source_ip_field" => "[source][ip]"
+                "dest_ip_field" => "[destination][ip]"
+                "source_port_field" => "[source][port]"
+                "dest_port_field" => "[destination][port]"
+                "protocol_field" => "[network][transport]"
+                "target_field" => "[network][community_id]"
+            }
+            tag_on_exception =>  "_rubyexception-all-community_id_bidirectional"
         }
+    }
+
+    mutate {
+        remove_field => [ "message", "millis", "nanos", "ip" , "port", "@version", "type", "[urls]", "[temp]" ]
+    }
 }
 
 output {
-    
+
     ## Meraki URL Logging
     elasticsearch {
-        hosts => "${ES_HOST}"
-        user => "${ES_INGEST}"
-        password => "${ES_INGEST_PW}"
+        hosts => "${ES77_HOST}"
+        user => "${ES77_INGEST}"
+        password => "${ES77_INGEST_PW}"
         index => "ecs-meraki-url"
         pipeline => "meraki"
     }
-}
 
+   # file {
+   #    path => "/var/log/logstash/syslog/meraki-url.log"
+   #    codec => "rubydebug"
+   # }
+}
