--- a/Meraki/logstash pipelines/Syslog/p-meraki-flow.conf
+++ b/Meraki/logstash pipelines/Syslog/p-meraki-flow.conf
@@ -21,9 +21,9 @@ filter {
         match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} ip_flow_%{NOTSPACE:flow_state} src=%{IP:[source][ip]} dst=%{IP:[destination][ip]} protocol=%{WORD:[network][transport]} sport=%{NUMBER:[source][port]} dport=%{NUMBER:[destination][port]} translated_src_ip=%{IP:[source][nat][ip]} translated_port=%{NUMBER:[source][nat][port]}" }
         match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} ip_flow_%{NOTSPACE:flow_state} src=%{IP:[source][ip]} dst=%{IP:[destination][ip]} protocol=%{WORD:[network][transport]} sport=%{NUMBER:[source][port]} dport=%{NUMBER:[destination][port]} translated_dst_ip=%{IP:[destination][nat][ip]} translated_port=%{NUMBER:[destination][nat][port]}" }
         match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} ip_flow_%{NOTSPACE:flow_state} src=%{IP:[source][ip]} dst=%{IP:[destination][ip]} protocol=%{WORD:[network][transport]} ?(?:translated_dst_ip=%{IP:[destination][nat][ip]})? ?(?:translated_src_ip=%{IP:[source][nat][ip]})?" }   
-        match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} %{WORD:[observer][name]} %{WORD:[temp][module]} ?(?:%{WORD:[event][action]})? src=%{IP:[source][ip]} dst=%{IP:[destination][ip]} ?(?:mac=%{MAC:[source][mac]})? protocol=%{WORD:[network][protocol]} sport=%{NUMBER:[source][port]} dport=%{NUMBER:[destination][port]} ?(?:pattern: %{GREEDYDATA:[rule][name]})?" }
-        match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} %{WORD:[observer][name]} %{WORD:[temp][module]} ?(?:%{WORD:[event][action]})? src=%{IP:[source][ip]} dst=%{IP:[destination][ip]} ?(?:mac=%{MAC:[source][mac]})? protocol=%{WORD:[network][protocol]} type=%{INT:[icmp][type]} pattern: %{INT:[rule][number]} %{GREEDYDATA:[rule][name]}" }
-    }   
+        match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} %{WORD:[observer][name]} %{WORD:[temp][module]} ?(?:%{WORD:[event][action]})? src=%{IP:[source][ip]} dst=%{IP:[destination][ip]} ?(?:mac=%{MAC:[source][mac]})? protocol=%{WORD:[network][transport]} sport=%{NUMBER:[source][port]} dport=%{NUMBER:[destination][port]} ?(?:pattern: %{GREEDYDATA:[rule][name]})?" }
+        match => { "message" => "%{INT:[millis]}.%{INT:[nanos]} %{WORD:[observer][name]} %{WORD:[temp][module]} ?(?:%{WORD:[event][action]})? src=%{IP:[source][ip]} dst=%{IP:[destination][ip]} ?(?:mac=%{MAC:[source][mac]})? protocol=%{WORD:[network][transport]} type=%{INT:[icmp][type]} pattern: %{INT:[rule][number]} %{GREEDYDATA:[rule][name]}" }
+    }  
     
      mutate {
 
