--- a/logstash/snmp.conf
+++ b/logstash/snmp.conf
@@ -2,7 +2,7 @@
 
 input {
     snmp {
-        hosts => [ {host => "udp:192.168.1.9/161" community => "8733455"} ]
+        hosts => [ {host => "udp:10.10.10.10/161" community => "RO SNMP COMMUNITY"} ]
         tables => [
             { "name" => "interface" "columns" => [".1.3.6.1.2.1.2.2.1.1",".1.3.6.1.2.1.2.2.1.1",".1.3.6.1.2.1.31.1.1.1.1",".1.3.6.1.2.1.2.2.1.3",".1.3.6.1.2.1.2.2.1.4",".1.3.6.1.2.1.2.2.1.5",".1.3.6.1.2.1.2.2.1.6",".1.3.6.1.2.1.2.2.1.7",".1.3.6.1.2.1.2.2.1.8",".1.3.6.1.2.1.2.2.1.9",".1.3.6.1.2.1.2.2.1.10",".1.3.6.1.2.1.2.2.1.13",".1.3.6.1.2.1.2.2.1.14",".1.3.6.1.2.1.2.2.1.16",".1.3.6.1.2.1.2.2.1.19",".1.3.6.1.2.1.2.2.1.20"] },
             { "name" => "cpu" "columns" => [ ".1.3.6.1.4.1.9.9.109.1.1.1.1.7" ] } ]
